super-fenics/jitfailure-dolfin_expression_a5c0df978852437a5ecaf41c4a1fb04f/error.log
/tmp/tmp_u80tpi3/dolfin_expression_a5c0df978852437a5ecaf41c4a1fb04f.cpp: In member function ‘virtual void dolfin::dolfin_expression_a5c0df978852437a5ecaf41c4a1fb04f::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmp_u80tpi3/dolfin_expression_a5c0df978852437a5ecaf41c4a1fb04f.cpp:61:28: error: expected identifier before numeric constant
           values[0] = 1.0*[2.0*(x[0]-0.5), 1.0];
                            ^~~
/tmp/tmp_u80tpi3/dolfin_expression_a5c0df978852437a5ecaf41c4a1fb04f.cpp:61:42: error: expected ‘]’ before ‘,’ token
           values[0] = 1.0*[2.0*(x[0]-0.5), 1.0];
                                          ^
/tmp/tmp_u80tpi3/dolfin_expression_a5c0df978852437a5ecaf41c4a1fb04f.cpp: In lambda function:
/tmp/tmp_u80tpi3/dolfin_expression_a5c0df978852437a5ecaf41c4a1fb04f.cpp:61:42: error: expected ‘{’ before ‘,’ token
/tmp/tmp_u80tpi3/dolfin_expression_a5c0df978852437a5ecaf41c4a1fb04f.cpp: In member function ‘virtual void dolfin::dolfin_expression_a5c0df978852437a5ecaf41c4a1fb04f::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmp_u80tpi3/dolfin_expression_a5c0df978852437a5ecaf41c4a1fb04f.cpp:61:26: error: no match for ‘operator*’ (operand types are ‘double’ and ‘dolfin::dolfin_expression_a5c0df978852437a5ecaf41c4a1fb04f::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const::<lambda()>’)
           values[0] = 1.0*[2.0*(x[0]-0.5), 1.0];
